# SimpleVO

./: CMakeLists.txt  algorithm.h  camera.cpp  camera.h  common.h  config.cpp  config.h  dataset.cpp  dataset.h  feature.cpp  feature.h  frame.cpp  frame.h  frontend.cpp  frontend.h  g2o_types.h  main.cpp  map.cpp  map.h  map_point.cpp  map_point.h  viewer.cpp  viewer.h  visual_odometry.cpp  visual_odometry.h
config/: default.yaml
